[gd_scene load_steps=13 format=2]

[ext_resource path="res://common/Basic3D/SafetyNet.gd" type="Script" id=1]
[ext_resource path="res://common/Environment/dirt_alt.material" type="Material" id=2]
[ext_resource path="res://Screens/RayCast/GrabLedge3D/GrabLedgePlayer3D.gd" type="Script" id=3]
[ext_resource path="res://common/Camera3D/ThirdPersonCamera.tscn" type="PackedScene" id=4]
[ext_resource path="res://common/Astronaut/AstronautSkin.tscn" type="PackedScene" id=6]
[ext_resource path="res://common/Environment/LevelGridMap.tscn" type="PackedScene" id=7]

[sub_resource type="CubeMesh" id=5]
size = Vector3( 6, 3, 2 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 3, 1.5, 1 )

[sub_resource type="CylinderMesh" id=1]
height = 3.0

[sub_resource type="CylinderShape" id=2]
height = 3.0

[sub_resource type="CapsuleShape" id=3]
radius = 0.330565
height = 0.5

[sub_resource type="BoxShape" id=4]
extents = Vector3( 50, 1, 50 )

[node name="GrabLedge3D" type="Spatial"]

[node name="LevelGridMap" parent="." instance=ExtResource( 7 )]
data = {
"cells": PoolIntArray( 2, 0, 1441821, -131069, 0, 9, -65540, 0, 9, -65536, 0, 1048585, -65535, 0, 1048585, -65534, 0, 1048585, -65533, 0, 10, -4, 0, 655370, -3, 0, 1048585, -2, 0, 1048585, -1, 0, 1048585, 2, 1, 1048577, 65532, 1, 1048576, -131069, 1, 9, -65540, 1, 9, -65536, 1, 1048585, -65535, 1, 1048585, -65534, 1, 1048591, -65533, 1, 10, -4, 1, 655376, -3, 1, 1048585, -2, 1, 1048585, -1, 1, 1048591, 2, 2, 655361, 65533, 2, 655361, 65534, 2, 1441793, -131069, 2, 9, -65540, 2, 9, -65536, 2, 15, -65535, 2, 1048585, -65534, 2, 15, -65533, 2, 16, -4, 2, 655376, -3, 2, 655375, -2, 2, 1048591, -1, 2, 1048585, -131072, 3, 9, -131071, 3, 9, -131070, 3, 9, -131069, 3, 1441836, -65540, 3, 655404, -65539, 3, 9, -65538, 3, 9, -65537, 3, 9, -65536, 3, 1441802, -65535, 3, 1441802, -65534, 3, 1441802, -65533, 3, 14, -4, 3, 1441806, -3, 3, 1441808, -2, 3, 1441808, -1, 3, 1441802, -131072, 65532, 9, -131071, 65532, 9, -131070, 65532, 9, -131069, 65532, 44, -65540, 65532, 1048620, -65539, 65532, 9, -65538, 65532, 9, -65537, 65532, 9, -65536, 65532, 1048586, -65535, 65532, 1048586, -65534, 65532, 1048586, -65533, 65532, 1048584, -4, 65532, 655374, -3, 65532, 1048586, -2, 65532, 1048586, -1, 65532, 1048586, 1, 65533, 1048577, -131069, 65533, 9, -65540, 65533, 9, -65536, 65533, 1048585, -65535, 65533, 1048585, -65534, 65533, 1048585, -65533, 65533, 10, -4, 65533, 655376, -3, 65533, 1441807, -2, 65533, 1048585, -1, 65533, 1048585, 0, 65534, 1441793, 65532, 65534, 655360, -131069, 65534, 9, -65540, 65534, 9, -65536, 65534, 1048585, -65535, 65534, 655375, -65534, 65534, 1048585, -65533, 65534, 10, -4, 65534, 655370, -3, 65534, 1048585, -2, 65534, 1048591, -1, 65534, 1048585, -131069, 65535, 9, -65540, 65535, 9, -65536, 65535, 1048585, -65535, 65535, 1048585, -65534, 65535, 1048585, -65533, 65535, 10, -4, 65535, 655370, -3, 65535, 1048585, -2, 65535, 1048585, -1, 65535, 1048585 )
}

[node name="Obstacles" type="Spatial" parent="."]

[node name="Obstacle" type="StaticBody" parent="Obstacles"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4 )
collision_mask = 0

[node name="ObstacleMeshInstance" type="MeshInstance" parent="Obstacles/Obstacle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
mesh = SubResource( 5 )
material/0 = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Obstacles/Obstacle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
shape = SubResource( 6 )

[node name="CylinderObstacle" type="StaticBody" parent="Obstacles"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, -4 )

[node name="ObstacleMeshInstance" type="MeshInstance" parent="Obstacles/CylinderObstacle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Obstacles/CylinderObstacle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
shape = SubResource( 2 )

[node name="CylinderObstacle2" type="StaticBody" parent="Obstacles"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -4 )

[node name="ObstacleMeshInstance" type="MeshInstance" parent="Obstacles/CylinderObstacle2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Obstacles/CylinderObstacle2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
shape = SubResource( 2 )

[node name="GrabLedgePlayer3D" type="KinematicBody" parent="."]
collision_layer = 2
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="GrabLedgePlayer3D"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.6, 0 )
shape = SubResource( 3 )

[node name="Pivot" type="Spatial" parent="GrabLedgePlayer3D"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="BodyRayCast" type="RayCast" parent="GrabLedgePlayer3D/Pivot" groups=[
"Draw",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0 )
enabled = true
cast_to = Vector3( 0, 0, 0.7 )

[node name="ReachRayCast" type="RayCast" parent="GrabLedgePlayer3D/Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0 )
enabled = true
cast_to = Vector3( 0, 0, 0.7 )

[node name="AstronautSkin" parent="GrabLedgePlayer3D/Pivot" instance=ExtResource( 6 )]

[node name="LedgeTimer" type="Timer" parent="GrabLedgePlayer3D"]
one_shot = true

[node name="ThirdPersonCamera" parent="GrabLedgePlayer3D" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.618, 0 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.707107, 0.5, 0.5, 0, -0.707107, 0.707107, 0.707107, -0.5, -0.5, 0, 10, 0 )
shadow_enabled = true
shadow_bias = 0.05
directional_shadow_blend_splits = true
directional_shadow_normal_bias = 0.2
directional_shadow_max_distance = 50.0

[node name="SafetyNet" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6.47564, 0 )
monitorable = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="SafetyNet"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0164833, 4.57253, 0 )
shape = SubResource( 4 )
